--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "hms:stop:all": "pm2 stop api-gateway && pm2 stop identity",
     "hms:preview": "turbo run hms:preview",
     "hms:gen:identity.ts:from:proto": "../protoc-25.1-osx-x86_64/bin/protoc --plugin=../node_modules/.bin/protoc-gen-ts_proto --ts_proto_out=./ --ts_proto_opt=nestJs=true ./proto/identity.proto"
-
   },
   "author": "Pius Onobhayedo",
   "license": "MIT",
@@ -27,7 +26,8 @@
     "@swc/cli": "^0.1.63",
     "@swc/core": "^1.3.100",
     "@types/loadable__component": "^5.13.7",
-    "turbo": "^1.11.2"
+    "turbo": "^1.11.2",
+    "vite-plugin-pwa": "^0.17.4"
   },
   "workspaces": [
     "apps/*",
@@ -39,6 +39,8 @@
     "@grpc/proto-loader": "^0.7.10",
     "@loadable/component": "^5.15.3",
     "@nestjs/microservices": "^10.2.10",
+    "@nestjs/serve-static": "^4.0.0",
+    "@nestjs/typeorm": "^10.0.1",
     "accept-language-parser": "^1.5.0",
     "directory-tree": "^3.5.1",
     "i18next": "^23.7.8",
@@ -46,8 +48,10 @@
     "i18next-fs-backend": "^2.3.1",
     "i18next-http-backend": "^2.4.2",
     "i18next-http-middleware": "^3.5.0",
+    "mysql": "^2.18.1",
     "pm2": "^5.3.0",
     "react-i18next": "^13.5.0",
-    "react-router-dom": "^6.20.0"
+    "react-router-dom": "^6.20.0",
+    "typeorm": "^0.3.19"
   }
 }
